Final page for prediction is connected

--- a/CreditScorePrediction/Templates/first.html
+++ b/CreditScorePrediction/Templates/first.html
@@ -88,7 +88,7 @@
               </div>
 
               <div class="input-field">
-                <label for="num_bank_accounts">Number of Bank Account</label>
+                <label for="num_bank_accounts">Number of Bank Accounts</label>
                 <input
                   type="number"
                   id="num_bank_accounts"
@@ -99,7 +99,7 @@
               </div>
 
               <div class="input-field">
-                <label for="num_credit_card">Credit Card Number</label>
+                <label for="num_credit_card">Number Credit Cards</label>
                 <input
                   type="number"
                   id="num_credit_card"
