--- a/CreditScorePrediction/Templates/second.html
+++ b/CreditScorePrediction/Templates/second.html
@@ -26,7 +26,7 @@
           <div class="details address">
             <div class="fields">
               <div class="input-field">
-                <label for="delay_from_due_date">Delay from due Date</label>
+                <label for="delay_from_due_date">Delay from Due Date</label>
                 <input
                   type="number"
                   id="delay_from_due_date"
