--- a/CreditScorePrediction/Templates/third.html
+++ b/CreditScorePrediction/Templates/third.html
@@ -32,9 +32,25 @@
             class="form-select"
             aria-label="Default select example"
           >
-            <option selected>Select menu</option>
-            <option value="Low">Low</option>
-            <option value="High">High</option>
+            <option selected>Select Payment Behaviour</option>
+            <option value="Low spent Small value payments">
+              Low spent Small value payments
+            </option>
+            <option value="Low spent Medium value payments">
+              Low spent Medium value payments
+            </option>
+            <option value="Low spent Large value payments">
+              Low spent Large value payments
+            </option>
+            <option value="High spent Low value payments">
+              High spent Low value payments
+            </option>
+            <option value="High spent Medium value payments">
+              High spent Medium value payments
+            </option>
+            <option value="High spent Large value payments">
+              High spent Large value payments
+            </option>
           </select>
           <br />
 
@@ -44,22 +60,23 @@
             class="form-select"
             aria-label="Default select example"
           >
-            <option selected>Select menu</option>
+            <option selected>Select Credit Mix</option>
             <option value="Good">Good</option>
             <option value="Standard">Standard</option>
             <option value="Bad">Bad</option>
           </select>
           <br />
 
-          <label>Minimum Payment Amount</label><br />
+          <label>Payment of Minimum Amount</label><br />
           <select
             name="Payment_of_Min_Amount"
             class="form-select"
             aria-label="Default select example"
           >
-            <option selected>Select menu</option>
+            <option selected>Select Payment of Minimum Amount</option>
             <option value="Yes">Yes</option>
             <option value="No">No</option>
+            <option value="NM">NM</option>
           </select>
 
           <div class="buttons">
