--- a/CreditScorePrediction/Templates/fourth.html
+++ b/CreditScorePrediction/Templates/fourth.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% load static %}
-    <link rel="stylesheet" href="% static 'fourth.css' %">
+    <link rel="stylesheet" href="{% static 'fourth.css' %}">
      
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
@@ -14,21 +14,12 @@
 <body>
     <div class="container">
         <header>Credit Score Form</header>
-
-        <form action="{% url 'preProcesing' %}">
-            {% csrf_token %}
-            <div class="popup">
-                <img src="img.jpg">
-
-                <h2>Result</h2>
-                <p>About Result that could be good or bad</p>
-
-                <button type="button">Ok</button>
-
-            </div>
-             
-        </form>
+        <div class="popup">
+            <img src="{% static 'image/img.jpg'%}">
+            <h2>{{result}}</h2>
+            <p>About Result that could be good or bad</p>
+            <button type="button">Ok</button>
+        </div>
     </div>
-
 </body>
 </html>
