Frontend integrated with Backend

--- a/CreditScorePrediction/Templates/customerList.html
+++ b/CreditScorePrediction/Templates/customerList.html
@@ -9,7 +9,7 @@
   <body>
     <ul>
       {% for data in customerList %}
-      <li>{{ data.customerID }} {{ data.creditScore }}</li>
+      <li>{{ data.customerID }} {{ data.name }} {{ data.creditScore }}</li>
       {% endfor %}
     </ul>
   </body>
