--- a/CreditScorePrediction/Templates/fourth.html
+++ b/CreditScorePrediction/Templates/fourth.html
@@ -1,25 +1,42 @@
 <!DOCTYPE html>
+
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% load static %}
-    <link rel="stylesheet" href="{% static 'fourth.css' %}">
-     
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+    <link rel="stylesheet" href="{% static 'third.css' %}" />
 
-    <title>Credit Score Fourth Page</title> 
+    <!-- <link rel="stylesheet" href="fourth.css"> -->
 
-<body>
+    <link
+      rel="stylesheet"
+      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
+    />
+
+    <title>Credit Score 4th Page</title>
+  </head>
+
+  <body>
     <div class="container">
-        <header>Credit Score Form</header>
-        <div class="popup">
-            <img src="{% static 'image/img.jpg'%}">
-            <h2>{{result}}</h2>
-            <p>About Result that could be good or bad</p>
-            <button type="button">Ok</button>
-        </div>
-    </div>
-</body>
+
+        <header>Credit Score Result</header>
+            <div class="popup">
+        
+                <h2>{{result}}</h2>
+        
+                <p style="color: #6a6c6d;"> <b>
+                  Customer ID:
+                </b> {{customerID}}</p>
+                <p style="color: #6a6c6d;"> <b>
+                  Customer Name:
+                </b> {{customerName}}</p>
+        
+                <div class="button" style="position: relative; left: 92.5px; top: 140px;">
+                    <span class="button">Ok</span>
+                </div>
+            </div>
+    <!--<script src="{% static 'js/third.js' %}"></script> -->
+  </body>
 </html>
