--- a/CreditScorePrediction/static/fourth.css
+++ b/CreditScorePrediction/static/fourth.css
@@ -1,23 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
-
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-
 body{
     min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #4070f4;
+    background-image: url("ink.png");
+    background-size: cover;
 }
-
 .container{
     position: relative;
-    max-width: 900px;
+    max-width: 500px;
     width: 100%;
     border-radius: 6px;
     padding: 30px;
@@ -25,14 +23,13 @@ body{
     background-color: #fff;
     box-shadow: 0 5px 10px rgba(0,0,0,0.1);
 }
-
 .container header{
     position: relative;
+    left: 122.5px;
     font-size: 20px;
     font-weight: 600;
     color: #333;
 }
-
 .container header::before{
     content: "";
     position: absolute;
@@ -41,41 +38,20 @@ body{
     height: 3px;
     width: 27px;
     border-radius: 8px;
-    background-color: #4070f4;
+    background-color: #21abcd;
 }
 
 .container form{
     position: relative;
     margin-top: 16px;
-    min-height: 490px;
+    min-height: 400px;
     background-color: #fff;
     overflow: hidden;
 }
 
-.container form .form{
-    position: absolute;
-    background-color: #fff;
-    transition: 0.3s ease;
-}
-
-.container form .title{
-    display: block;
-    margin-bottom: 8px;
-    font-size: 16px;
-    font-weight: 500;
-    margin: 6px 0;
-    color: #333;
-}
-
-.container form .fields{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
 .popup{
     width: 450px;
+    height: 350px;
     background: #f2f2f2;
     border-radius: 10px;
     position: absolute;
@@ -84,7 +60,7 @@ body{
     transform: translate(-50%, -50%);
     text-align: center;
     padding: 0 30px 30px;
-    color: #333;
+    color: #363636;
 }
 
 .popup img{
@@ -99,18 +75,30 @@ body{
     margin: 30px 0 10px;
 }
 
-.popup button{
+.button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 45px;
+    max-width: 200px;
     width: 100%;
-    margin-top: 50px;
-    padding: 10px;
-    background: white;
-    color: #333;
-    border: 0;
+    border: none;
     outline: none;
-    font-size: 15px;
+    color: #fff;
     border-radius: 5px;
+    margin: 25px 0;
+    background-color: #92a1cf;
+    transition: all 0.3s linear;
     cursor: pointer;
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+}
+
+.button{
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.button:hover{
+    background-color: #b0c4de;
 }
 
 
