--- a/CreditScorePrediction/Templates/third.html
+++ b/CreditScorePrediction/Templates/third.html
@@ -140,6 +140,6 @@
       </form>
     </div>
 
-    <!--<script src="{% static 'js/third.js' %}"></script> -->
+    <!-- <script src="{% static 'js/goBack.js' %}"></script> -->
   </body>
 </html>
