--- a/CreditScorePrediction/static/fourth.css
+++ b/CreditScorePrediction/static/fourth.css
@@ -1,121 +1,120 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
-body{
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-image: url("ink.png");
-    background-size: cover;
+body {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: url("image/ink.png");
+  background-size: cover;
 }
-.container{
-    position: relative;
-    max-width: 500px;
-    width: 100%;
-    border-radius: 6px;
-    padding: 30px;
-    margin: 0 15px;
-    background-color: #fff;
-    box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+.container {
+  position: relative;
+  max-width: 500px;
+  width: 100%;
+  border-radius: 6px;
+  padding: 30px;
+  margin: 0 15px;
+  background-color: #fff;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
-.container header{
-    position: relative;
-    left: 122.5px;
-    font-size: 20px;
-    font-weight: 600;
-    color: #333;
+.container header {
+  position: relative;
+  left: 122.5px;
+  font-size: 20px;
+  font-weight: 600;
+  color: #333;
 }
-.container header::before{
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: -2px;
-    height: 3px;
-    width: 27px;
-    border-radius: 8px;
-    background-color: #21abcd;
-}
-
-.form{
-    position: relative;
-    margin-top: 16px;
-    min-height: 400px;
-    background-color: #fff;
-    overflow: hidden;
+.container header::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  height: 3px;
+  width: 27px;
+  border-radius: 8px;
+  background-color: #21abcd;
 }
 
-.popup{
-    width: 450px;
-    height: 350px;
-    background: #f2f2f2;
-    border-radius: 10px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    padding: 0 30px 30px;
-    color: #363636;
+.form {
+  position: relative;
+  margin-top: 16px;
+  min-height: 400px;
+  background-color: #fff;
+  overflow: hidden;
 }
 
-.popup img{
-    margin-top: -20px;
-    border-radius: 50%;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+.popup {
+  width: 450px;
+  height: 350px;
+  background: #f2f2f2;
+  border-radius: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  padding: 0 30px 30px;
+  color: #363636;
 }
 
-.popup h2{
-    font-size: 35px;
-    font-weight: 500;
-    margin: 30px 0 10px;
+.popup img {
+  margin-top: -20px;
+  border-radius: 50%;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
-.button{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 45px;
-    max-width: 200px;
-    width: 100%;
-    border: none;
-    outline: none;
-    color: #fff;
-    border-radius: 5px;
-    margin: 25px 0;
-    background-color: #92a1cf;
-    transition: all 0.3s linear;
-    cursor: pointer;
+.popup h2 {
+  font-size: 35px;
+  font-weight: 500;
+  margin: 30px 0 10px;
 }
 
-.button{
-    font-size: 14px;
-    font-weight: 400;
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 45px;
+  max-width: 200px;
+  width: 100%;
+  border: none;
+  outline: none;
+  color: #fff;
+  border-radius: 5px;
+  margin: 25px 0;
+  background-color: #92a1cf;
+  transition: all 0.3s linear;
+  cursor: pointer;
 }
 
-.button:hover{
-    background-color: #b0c4de;
+.button {
+  font-size: 14px;
+  font-weight: 400;
 }
 
+.button:hover {
+  background-color: #b0c4de;
+}
 
 @media (max-width: 750px) {
-    .container form{
-        overflow-y: scroll;
-    }
-    .container form::-webkit-scrollbar{
-       display: none;
-    }
-    form .fields .input-field{
-        width: calc(100% / 2 - 15px);
-    }
+  .container form {
+    overflow-y: scroll;
+  }
+  .container form::-webkit-scrollbar {
+    display: none;
+  }
+  form .fields .input-field {
+    width: calc(100% / 2 - 15px);
+  }
 }
 
 @media (max-width: 550px) {
-    form .fields .input-field{
-        width: 100%;
-    }
+  form .fields .input-field {
+    width: 100%;
+  }
 }
