Member list page modified

--- a/CreditScorePrediction/Templates/first.html
+++ b/CreditScorePrediction/Templates/first.html
@@ -119,6 +119,7 @@
                   id="annual_income"
                   name="Annual_Income"
                   placeholder="Enter annual income"
+                  step="any"
                   required
                 />
               </div>
