--- a/CreditScorePrediction/Templates/member.html
+++ b/CreditScorePrediction/Templates/member.html
@@ -36,6 +36,7 @@
               <th>Occupation</th>
               <th>Age</th>
               <th>Credit Score</th>
+              <th>Show Details</th>
             </tr>
           </thead>
 
@@ -47,6 +48,7 @@
               <td>{{ data.occupation }}</td>
               <td>{{ data.age }}</td>
               <td>{{ data.creditScore }}</td>
+              <td><a href="" class="cool">Show More</a></td>
             </tr>
             {% endfor %}
           </tbody>
