--- a/CreditScorePrediction/static/third.css
+++ b/CreditScorePrediction/static/third.css
@@ -5,12 +5,13 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+
 body {
   min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url("image/ink.png");
+  background-image: url("image/mar.jpg");
   background-size: cover;
 }
 .container {
@@ -20,7 +21,7 @@ body {
   border-radius: 6px;
   padding: 30px;
   margin: 0 15px;
-  background-color: #fff;
+  background-color: #f2f2f2;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
 .container header {
@@ -37,14 +38,14 @@ body {
   height: 3px;
   width: 27px;
   border-radius: 8px;
-  background-color: #21abcd;
+  background-color: #6699ff;
 }
 
 .container form {
   position: relative;
   margin-top: 16px;
   min-height: 490px;
-  background-color: #fff;
+  background-color: #f2f2f2;
   overflow: hidden;
 }
 
@@ -121,17 +122,17 @@ select {
   color: #fff;
   border-radius: 5px;
   margin: 25px 0;
-  background-color: #21abcd;
+  background-color: #6699ff;
   transition: all 0.3s linear;
   cursor: pointer;
 }
 
 .container form .submit {
-  background-color: #92a1cf;
+  background-color: #f6adc6;
 }
 
 .container form .submit:hover {
-  background-color: #b0c4de;
+  background-color: #fbcce7;
 }
 
 .container form .btnText {
@@ -143,7 +144,7 @@ form button:hover {
 }
 
 .backBtn:hover {
-  background-color: #8cbed6;
+  background-color: #b3ccff;
 }
 
 form button i,
