--- a/CreditScorePrediction/Templates/third.html
+++ b/CreditScorePrediction/Templates/third.html
@@ -128,7 +128,7 @@
           <div class="buttons">
             <div class="backBtn">
               <i class="uil uil-navigator"></i>
-              <span class="btnText">Back</span>
+              <span class="btnText" onclick="goBack()">Back</span>
             </div>
 
             <button class="submit" type="submit">
@@ -139,6 +139,11 @@
         </div>
       </form>
     </div>
+    <script>
+      function goBack() {
+        window.history.back();
+      }
+    </script>
 
     <!-- <script src="{% static 'js/goBack.js' %}"></script> -->
   </body>
