--- a/CreditScorePrediction/static/home.css
+++ b/CreditScorePrediction/static/home.css
@@ -1,20 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap");
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-.container{
-    width: 100%;
-    height: 100vh;
-    position: relative;
-    overflow: hidden;
+.container {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
 }
 
-#myVideo { 
+#myVideo {
   position: absolute;
   top: 0;
   left: 0;
@@ -23,52 +23,52 @@
   object-fit: cover;
 }
 
-.container span{
-    color: #fff;
-    display: block;
+.container span {
+  color: #fff;
+  display: block;
 }
 
-.row{
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
+.row {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
-.row a{
-    color: #003C6B;
-    text-decoration: none;
-    font-weight: 500;
-    text-align: center;
-    position: relative;
-    left: 40.5%;
-    transform: translate(-50%,-50%);
-    padding: 10px 20px;
-    margin-top: 30px;
-    margin-right: 30px;
-    border: 2px solid #fff;
-    border-radius: 5px;
-    transition: background-position .3s,color .3s;
+.row a {
+  color: #003c6b;
+  text-decoration: none;
+  font-weight: 500;
+  text-align: center;
+  position: relative;
+  left: 40.5%;
+  transform: translate(-50%, -50%);
+  padding: 10px 20px;
+  margin-top: 30px;
+  margin-right: 30px;
+  border: 2px solid #fff;
+  border-radius: 5px;
+  transition: background-position 0.3s, color 0.3s;
 }
 
-.row a:hover{
-    color: #003C6B;
-    background-color: #fff;
+.row a:hover {
+  color: #003c6b;
+  background-color: #fff;
 }
 
 @media (max-width: 750px) {
-    .container form{
-        overflow-y: scroll;
-    }
-    .container form::-webkit-scrollbar{
-       display: none;
-    }
-    form .fields .input-field{
-        width: calc(100% / 2 - 15px);
-    }
+  .container form {
+    overflow-y: scroll;
+  }
+  .container form::-webkit-scrollbar {
+    display: none;
+  }
+  form .fields .input-field {
+    width: calc(100% / 2 - 15px);
+  }
 }
 
 @media (max-width: 550px) {
-    form .fields .input-field{
-        width: 100%;
-    }
+  form .fields .input-field {
+    width: 100%;
+  }
 }
