--- a/CreditScorePrediction/static/member.css
+++ b/CreditScorePrediction/static/member.css
@@ -1,46 +1,71 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap");
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-body{
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-image: url("blue.avif");
-    background-size: cover;
+body {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: url("image/riri.avif");
+  background-size: cover;
 }
 
-.container{
-    position: relative;
-    max-width: 800px;
-    width: 100%;
-    border-radius: 6px;
-    padding: 30px;
-    margin: 0 15px;
-    background-color: #fff;
-    box-shadow: 0 0 20px rgba(0,0,0,0.1);
+.container {
+  position: relative;
+  max-width: 800px;
+  width: 100%;
+  border-radius: 6px;
+  padding: 30px;
+  margin: 0 15px;
+  background-color: #fff;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 
-.container header{
-    position: relative;
-    font-size: 20px;
-    font-weight: 600;
-    color: #333;
+.container header {
+  position: relative;
+  font-size: 20px;
+  font-weight: 600;
+  color: #333;
 }
 
-.container header::before{
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: -2px;
-    height: 3px;
-    width: 27px;
-    border-radius: 8px;
-    background-color: #21abcd;
+.container header::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  height: 3px;
+  width: 27px;
+  border-radius: 8px;
+  background-color: #6699ff;
+}
+
+.cool {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 80px;
+  color: #333;
+  background-color: #f6adc6;
+  text-decoration: none;
+  font-weight: 500;
+  text-align: center;
+  position: relative;
+  top: 12px;
+  transform: translate(-50%, -50%);
+  padding: 1px 2px;
+  margin-left: 44px;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  transition: background-position 0.3s, color 0.3s;
+}
+
+.cool:hover {
+  color: #fff;
+  background-color: #6699ff;
 }
