--- a/CreditScorePrediction/Templates/details.html
+++ b/CreditScorePrediction/Templates/details.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% load static %}
-    <link rel="stylesheet" href="details.css" />
+    <link rel="stylesheet" href="{% static 'details.css' %}" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
