--- a/CreditScorePrediction/static/member.css
+++ b/CreditScorePrediction/static/member.css
@@ -12,7 +12,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url("image/riri.avif");
+  background-image: url("image/mar.jpg");
   background-size: cover;
 }
 
