--- a/CreditScorePrediction/Templates/second.html
+++ b/CreditScorePrediction/Templates/second.html
@@ -37,6 +37,7 @@
                   id="delay_from_due_date"
                   name="Delay_from_due_date"
                   placeholder="Enter delayed number"
+                  step="any"
                   required
                 />
               </div>
@@ -77,7 +78,9 @@
               </div>
 
               <div class="input-field">
-                <label for="num_of_delayed_payment">Delayed Payment</label>
+                <label for="num_of_delayed_payment"
+                  >Number of Delayed Payment</label
+                >
                 <input
                   type="number"
                   id="num_of_delayed_payment"
@@ -88,7 +91,9 @@
               </div>
 
               <div class="input-field">
-                <label for="num_credit_inquiries">Credit Inquiry Number</label>
+                <label for="num_credit_inquiries"
+                  >Number of Credit Inquiries</label
+                >
                 <input
                   type="number"
                   id="num_credit_inquiries"
@@ -105,6 +110,7 @@
                   id="outstanding_debt"
                   name="Outstanding_Debt"
                   placeholder="Enter outstanding debt"
+                  step="any"
                   required
                 />
               </div>
@@ -118,6 +124,7 @@
                   id="credit_utilization_ratio"
                   name="Credit_Utilization_Ratio"
                   placeholder="Enter credit utilization ratio"
+                  step="any"
                   required
                 />
               </div>
@@ -129,19 +136,21 @@
                   id="total_emi_per_month"
                   name="Total_EMI_per_month"
                   placeholder="Enter total EMI per month"
+                  step="any"
                   required
                 />
               </div>
 
               <div class="input-field">
                 <label for="amount_invested_monthly"
-                  >Monthly Invested Amount</label
+                  >Amount Invested Monthly</label
                 >
                 <input
                   type="number"
                   id="amount_invested_monthly"
                   name="Amount_invested_monthly"
                   placeholder="Enter monthly invested amount"
+                  step="any"
                   required
                 />
               </div>
@@ -153,6 +162,7 @@
                   id="monthly_balance"
                   name="Monthly_Balance"
                   placeholder="Enter monthly balance"
+                  step="any"
                   required
                 />
               </div>
