--- a/CreditScorePrediction/Templates/first.html
+++ b/CreditScorePrediction/Templates/first.html
@@ -102,7 +102,7 @@
               </div>
 
               <div class="input-field">
-                <label for="num_credit_card">Number Credit Cards</label>
+                <label for="num_credit_card">Number of Credit Cards</label>
                 <input
                   type="number"
                   id="num_credit_card"
@@ -131,6 +131,7 @@
                   id="monthly_inhald_salary"
                   name="Monthly_Inhald_Salary"
                   placeholder="Enter monthly inhand salary"
+                  step="any"
                   required
                 />
               </div>
@@ -142,6 +143,7 @@
                   id="changed_credit_limit"
                   name="Changed_Credit_Limit"
                   placeholder="Enter changed credit limit"
+                  step="any"
                   required
                 />
               </div>
@@ -164,6 +166,7 @@
                   id="interest_rate"
                   name="Interest_Rate"
                   placeholder="Enter interest rate"
+                  step="any"
                   required
                 />
               </div>
