--- a/CreditScorePrediction/Templates/details.html
+++ b/CreditScorePrediction/Templates/details.html
@@ -17,12 +17,14 @@
 
   <body>
     <div class="container-xl px-4 mt-4">
-      <hr class="mt-0 mb-4" />
       <div class="row">
         <div class="col-xl-4">
-          <div class="card mb-4 mb-xl-0">
-            <div class="card-header">Credit Customer</div>
-            <div class="card-body text-center">
+          <div class="card mb-4 mb-xl-0" style="background-color: #dcdcdc">
+            <div class="card-header">Customer Information</div>
+            <div
+              class="card-body text-center"
+              style="background-color: #f2f2f2"
+            >
               <img
                 class="img-account-profile rounded-circle mb-2"
                 src="http://bootdey.com/img/Content/avatar/avatar1.png"
@@ -110,8 +112,10 @@
           </div>
         </div>
         <div class="col-xl-8">
-          <div class="card mb-4">
-            <div class="card-header">Identity Details</div>
+          <div class="card mb-4" style="background-color: #f2f2f2">
+            <div class="card-header" style="background-color: #dcdcdc">
+              Identity Details
+            </div>
             <div class="card-body">
               <form>
                 <div class="row gx-3 mb-3">
